--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,16 +2,14 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
+    branches: [main]
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  # Приводим к lowercase
+  IMAGE_NAME: ${{ lower(github.repository) }}
 
 jobs:
-  # Тестирование и сборка
   test-and-build:
     runs-on: ubuntu-latest
     
@@ -25,13 +23,7 @@ jobs:
     - name: Build Docker image
       run: |
         docker build -t ${{ env.IMAGE_NAME }}:test .
-        
-    - name: Run tests
-      run: |
-        docker run --rm ${{ env.IMAGE_NAME }}:test npm test
-      # Замените команду тестирования на свою
 
-  # Сборка и публикация Docker образа
   build-and-push:
     needs: test-and-build
     runs-on: ubuntu-latest
@@ -63,26 +55,3 @@ jobs:
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
         labels: ${{ steps.meta.outputs.labels }}
-
-  # Деплой (пример для сервера)
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    
-    steps:
-    - name: Deploy to server
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        script: |
-          docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          docker stop my-app || true
-          docker rm my-app || true
-          docker run -d \
-            --name my-app \
-            -p 5000:5000 \
-            --restart unless-stopped \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
